testing/errors/nopseudopccontext4.a
	primes = [2,3,5]
	a = &primes	; -> "Un-pseudopc operator '&' can only be applied to number symbols."
